--- a/03-task-manager/starter/main.css
+++ b/03-task-manager/starter/main.css
@@ -5,7 +5,7 @@
 }
 /* fonts */
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600&family=Montserrat&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600&family=Montserrat&display=swap");
 html {
   font-size: 100%;
 } /*16px*/
@@ -42,10 +42,8 @@ html {
   --green-dark: #0f5132;
 
   /* fonts  */
-  /* --headingFont: 'Spectral', serif;
-  --bodyFont: 'Karla', sans-serif; */
-  --headingFont: 'Roboto', sans-serif;
-  --bodyFont: 'Nunito', sans-serif;
+  --headingFont: "Roboto", sans-serif;
+  --bodyFont: "Nunito", sans-serif;
   --smallText: 0.7em;
   /* rest of the vars */
   --backgroundColor: var(--grey-50);
@@ -254,11 +252,154 @@ ul {
   margin: 0 auto;
   margin-top: -1rem;
 }
+
 /*
 =============== 
-Counter
+Task Manager
 ===============
 */
 
+.task-form {
+  margin-top: 6rem;
+}
+.task-form h4 {
+  text-align: center;
+}
+.submit-btn {
+  width: 100%;
+  margin-top: 1rem;
+}
+@media screen and (min-width: 576px) {
+  .form-control {
+    display: flex;
+  }
+  .task-input {
+    border-radius: 0;
+    border-top-left-radius: var(--borderRadius);
+    border-bottom-left-radius: var(--borderRadius);
+  }
+  .submit-btn {
+    border-radius: 0;
+    border-top-right-radius: var(--borderRadius);
+    border-bottom-right-radius: var(--borderRadius);
+    width: 175px;
+  }
+}
+.text-success {
+  color: var(--green-dark);
+}
 
+/*
+=============== 
+task 
+===============
+*/
 
+.tasks-container {
+  width: 90vw;
+  max-width: var(--fixed-width);
+  margin: 0 auto;
+  margin-top: 2rem;
+  padding-bottom: 4rem;
+}
+.tasks {
+  display: grid;
+  gap: 1rem;
+}
+.single-task {
+  padding: 1rem 2.5rem;
+  background: var(--white);
+  border-radius: var(--borderRadius);
+  box-shadow: var(--shadow-2);
+  transition: var(--transition);
+  display: flex;
+  justify-content: space-between;
+}
+.single-task:hover {
+  box-shadow: var(--shadow-4);
+}
+.single-task h5 {
+  margin-bottom: 0;
+}
+.single-task .fa-check-circle {
+  margin-left: -1.25rem;
+  margin-right: 1.5rem;
+  font-size: 1rem;
+  color: var(--green-dark);
+  visibility: hidden;
+}
+.task-completed h5 {
+  text-decoration: line-through;
+}
+.task-completed .fa-check-circle {
+  visibility: visible;
+}
+
+/* Task links */
+.task-links {
+  display: flex;
+  align-items: center;
+  gap: 0 0.5rem;
+}
+.delete-btn,
+.edit-link {
+  background: transparent;
+  font-size: 0.75rem;
+  border: transparent;
+  cursor: pointer;
+}
+.edit-links {
+  color: var(--green-dark);
+}
+
+.edit-link {
+color: var(--green-dark);
+}
+.delete-btn{
+  color: var(--red-dark);
+}
+
+/*
+=============== 
+task 
+===============
+*/
+.single-task-form{
+  margin-top: 6rem;
+}
+.single-task-form h4{
+  text-align: center;
+}
+.single-task-form p{
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.single-task-form .form-control{
+  display: grid;
+  grid-template-columns: 150px 1fr;
+  align-items: center;
+  gap: 0 1rem;
+  margin-bottom: 0.75rem;
+}
+.single-task-form label{
+  margin-bottom: 0;
+  font-size: 1rem;
+
+}
+.back-link{
+  display: block;
+  width: 250px;
+  margin: 0 auto;
+  text-align: center;
+  margin-top: 6rem;
+  background: var(--black);
+}
+.back-link:hover{
+  background: var(--black);
+  opacity: 0.75;
+}
+
+.single-task-form .form-alert{
+  text-align: center;
+  margin-top: 1rem;
+}
